--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <link rel="apple-touch-icon" href="./logo192.png" />
         <link rel="manifest" href="./manifest.json" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
             rel="stylesheet"
         />
         <title>React App</title>
         <script defer="defer" src="./static/js/main.6fa0f6f8.js"></script>
-        <link href="./static/css/main.4a7cf4eb.css" rel="stylesheet" />
+        <link href="/static/css/main.bc948df2.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
