--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             rel="stylesheet"
         />
         <title>React App</title>
-        <script defer="defer" src="./static/js/main.6fa0f6f8.js"></script>
-        <link href="/static/css/main.bc948df2.css" rel="stylesheet" />
+        <script defer="defer" src="./static/js/main.dc812eda.js"></script>
+        <link href="./static/css/main.4a7cf4eb.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
